--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -12,7 +12,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: https://index.docker.io/v1/
-          username: ${{ vars.DOCKERHUB_USERNAME }}
+          username: aldazar
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Set up QEMU
