--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -12,7 +12,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: https://index.docker.io/v1/
-          username: aldazar
+          username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Set up QEMU
@@ -25,4 +25,4 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: aldazar/app:latest
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/app:latest
