--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,3 +26,5 @@ jobs:
         with:
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/flask-example:latest
+          platforms: |
+            [linux/arm64]
