--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,5 +26,10 @@ jobs:
         with:
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/flask-example:latest
-          platforms: |
-            [linux/arm64]
+      - name: Deploy Stage
+        uses: fjogeleit/http-request-action@v1
+        with:
+          url: 'https://api.render.com/v1/services?limit=20'
+          method: 'GET'
+          customHeaders: |
+            '{"Content-Type": "application/json", "Authorization": "Bearer  ${{ secrets.RENDER_TOKEN }}"}'
